[gd_scene load_steps=2 format=3 uid="uid://b7mmo1i52gpsf"]

[ext_resource type="Script" path="res://Scripts/GUI-code/world_button.gd" id="1_wclov"]

[node name="WorldButton" type="HBoxContainer"]
theme_override_constants/separation = 10
script = ExtResource("1_wclov")

[node name="PlayButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "WORLD NAME"
alignment = 0

[node name="DeleteButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Delete"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
